--- a/src/index.html
+++ b/src/index.html
@@ -291,18 +291,11 @@
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consecte</p>
+                            <p>Why should I use a password generator?</p>
                         </div>
                         <p class="answer">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
-                            aliquam, purus sit amet luctus venenatis, lectus magna
-                            fringilla urna, porttitor rhoncus dolor purus non enim
-                            praesent elementum facilisis leo, vel fringilla est
-                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
-                            lobortis scelerisque fermentum dui faucibus in ornare quam
-                            viverra orci sagittis eu volutpat odio facilisis mauris sit
-                            amet massa vitae tortor condimentum lacinia quis vel eros
-                            donec ac odio tempor
+                            A password generator gives you strong, random and secure
+                            password, hard to guess and to hack
                         </p>
                     </li>
                     <li>
@@ -313,18 +306,14 @@
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consecte</p>
+                            <p>Do you store the generated passwords?</p>
                         </div>
                         <p class="answer">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
-                            aliquam, purus sit amet luctus venenatis, lectus magna
-                            fringilla urna, porttitor rhoncus dolor purus non enim
-                            praesent elementum facilisis leo, vel fringilla est
-                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
-                            lobortis scelerisque fermentum dui faucibus in ornare quam
-                            viverra orci sagittis eu volutpat odio facilisis mauris sit
-                            amet massa vitae tortor condimentum lacinia quis vel eros
-                            donec ac odio tempor
+                            We respect your privacy and we do not collect any of your
+                            personal data, we do not store any generated password. Our
+                            site is open source under the GNU AGPLv3 license, which gives
+                            it great reliability and security (anyone can check the source
+                            code)
                         </p>
                     </li>
                     <li>
@@ -335,18 +324,26 @@
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consecte</p>
+                            <p>What can I do to help me remember my new password?</p>
                         </div>
                         <p class="answer">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
-                            aliquam, purus sit amet luctus venenatis, lectus magna
-                            fringilla urna, porttitor rhoncus dolor purus non enim
-                            praesent elementum facilisis leo, vel fringilla est
-                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
-                            lobortis scelerisque fermentum dui faucibus in ornare quam
-                            viverra orci sagittis eu volutpat odio facilisis mauris sit
-                            amet massa vitae tortor condimentum lacinia quis vel eros
-                            donec ac odio tempor
+                            Don't worry, our website generate a sentence which can help
+                            you to memorize it. There are a number of things you can do:
+                            Write it down. It should be the only thing on the paper, do
+                            not include your username. When writing down a password you
+                            should obfuscate it in some fashion, such as adding characters
+                            to it or taking characters out so that someone who sees it
+                            will have a hard time guessing your password. Once you’ve
+                            written it down you should store it in a safe place like a
+                            locked drawer.Now, use the generated sentence to memorize your
+                            password. After that,you should destroy the paper so that the
+                            password only exists in your head. Type it thirty (30) times
+                            in a row. Typing your password thirty times will help you
+                            commit it to muscle memory. Chose not to have applications
+                            save your password. By choosing not to have applications save
+                            your password you will force yourself to type your password
+                            more often. This will improve your ability to remember your
+                            password.
                         </p>
                     </li>
                     <li>
@@ -357,18 +354,13 @@
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consecte</p>
+                            <p>How can I choose a strong password?</p>
                         </div>
                         <p class="answer">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
-                            aliquam, purus sit amet luctus venenatis, lectus magna
-                            fringilla urna, porttitor rhoncus dolor purus non enim
-                            praesent elementum facilisis leo, vel fringilla est
-                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
-                            lobortis scelerisque fermentum dui faucibus in ornare quam
-                            viverra orci sagittis eu volutpat odio facilisis mauris sit
-                            amet massa vitae tortor condimentum lacinia quis vel eros
-                            donec ac odio tempor
+                            First of all, use our password generator. Secondly, from the
+                            settings panel set the password length at least 16 characters,
+                            use at least one number, one uppercase letter, one lowercase
+                            letter, one special symbol, one ambiguous character
                         </p>
                     </li>
                     <li>
@@ -379,18 +371,17 @@
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consecte</p>
+                            <p>
+                                Why do we need this level of security? What are we trying
+                                to protect?
+                            </p>
                         </div>
                         <p class="answer">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
-                            aliquam, purus sit amet luctus venenatis, lectus magna
-                            fringilla urna, porttitor rhoncus dolor purus non enim
-                            praesent elementum facilisis leo, vel fringilla est
-                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
-                            lobortis scelerisque fermentum dui faucibus in ornare quam
-                            viverra orci sagittis eu volutpat odio facilisis mauris sit
-                            amet massa vitae tortor condimentum lacinia quis vel eros
-                            donec ac odio tempor
+                            The College takes the security of our network and systems
+                            seriously. Your personal files, e-mail, and other documents
+                            are important to you and the College. For these reasons the
+                            College has developed password management policies and
+                            procedures to safe guard your password and your privacy.
                         </p>
                     </li>
                 </ul>
