big edit in Faqs js
make the all question onclick not only the chevron

--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron1" id="chevron1" />
+                                <input type="hidden" name="chevron1" id="chevron1" />
                                 <label for="chevron1">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
@@ -301,7 +301,7 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron2" id="chevron2" />
+                                <input type="hidden" name="chevron2" id="chevron2" />
                                 <label for="chevron2">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
@@ -319,7 +319,7 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron3" id="chevron3" />
+                                <input type="hidden" name="chevron3" id="chevron3" />
                                 <label for="chevron3">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
@@ -349,7 +349,7 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron4" id="chevron4" />
+                                <input type="hidden" name="chevron4" id="chevron4" />
                                 <label for="chevron4">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
@@ -366,7 +366,7 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron5" id="chevron5" />
+                                <input type="hidden" name="chevron5" id="chevron5" />
                                 <label for="chevron5">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
