convert passlegnth to an imput number + new functions

--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,14 @@
                             </li>
                             <li class="select">
                                 <button type="button" data-op="-1">−</button>
-                                <h4 id="passLength">12</h4>
+                                <input
+                                    type="number"
+                                    name="number"
+                                    id="passLength"
+                                    value="12"
+                                    min="6"
+                                    max="99"
+                                />
                                 <button type="button" data-op="1">+</button>
                             </li>
                         </ul>
