add settings data-onhover

--- a/src/index.html
+++ b/src/index.html
@@ -154,42 +154,45 @@
                             <i class="close fas fa-times-circle" id="closeSettings"></i>
                         </div>
                         <ul>
-                            <li class="button active">
+                            <li class="button active" data-onhover="( e.g. 123456 )">
                                 <h4>1</h4>
                                 <div class="right">
                                     <h5>Numbers</h5>
                                     <h6></h6>
                                 </div>
                             </li>
-                            <li class="button active">
+                            <li class="button active" data-onhover="( e.g. abcdefgh )">
                                 <h4>a</h4>
                                 <div class="right">
                                     <h5>Lowercase</h5>
                                     <h6></h6>
                                 </div>
                             </li>
-                            <li class="button active">
+                            <li class="button active" data-onhover="( e.g. ABCDEFGH )">
                                 <h4>A</h4>
                                 <div class="right">
                                     <h5>Uppercase</h5>
                                     <h6></h6>
                                 </div>
                             </li>
-                            <li class="button active">
+                            <li class="button active" data-onhover="( e.g. @#$% )">
                                 <h4>#</h4>
                                 <div class="right">
                                     <h5>Symbols</h5>
                                     <h6></h6>
                                 </div>
                             </li>
-                            <li class="button">
+                            <li
+                                class="button"
+                                data-onhover="( e.g. {[(/'&quot;`~,;:.&lt;)"
+                            >
                                 <h4>~</h4>
                                 <div class="right">
                                     <h5>Ambiguous</h5>
                                     <h6></h6>
                                 </div>
                             </li>
-                            <li class="select">
+                            <li class="select" data-onhover="Password length">
                                 <button type="button" data-op="-1">−</button>
                                 <input
                                     type="number"
