make only one theme, add rel="noopener" to links

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         <link rel="stylesheet" href="./scss/style.scss" />
         <title>IMO | Password generator</title>
     </head>
-    <body class="light">
+    <body>
         <header class="parent" id="main">
             <nav class="topnav" id="topnav">
                 <div class="container">
@@ -417,20 +417,28 @@
                             </p>
                             <ul class="social">
                                 <li>
-                                    <a href="https://www.facebook.com/med.ouanis42">
+                                    <a
+                                        href="https://www.facebook.com/med.ouanis42"
+                                        rel="noopener"
+                                    >
                                         <i class="fab fa-facebook-f"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://www.instagram.com/med.ouanis42">
+                                    <a
+                                        href="https://www.instagram.com/med.ouanis42"
+                                        rel="noopener"
+                                    >
                                         <i class="fab fa-instagram"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="#" rel="noopener"
+                                        ><i class="fab fa-linkedin-in"></i
+                                    ></a>
                                 </li>
                                 <li>
-                                    <a href="https://github.com/rouanis5">
+                                    <a href="https://github.com/rouanis5" rel="noopener">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </li>
@@ -461,7 +469,11 @@
                         <span>2</span>
                         <p>
                             Still have a quick question? Get an instant reply on
-                            <a href="https://www.instagram.com/med.ouanis42">Instagram</a>
+                            <a
+                                href="https://www.instagram.com/med.ouanis42"
+                                rel="noopener"
+                                >Instagram</a
+                            >
                             ...
                         </p>
                     </li>
@@ -563,17 +575,23 @@
                         <ul>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                <a href="mailto:ouanis42@gmail.com">
+                                <a href="mailto:ouanis42@gmail.com" rel="noopener">
                                     ouanis42@gmail.com
                                 </a>
                             </li>
                             <li>
                                 <i class="fas fa-phone-alt"></i>
-                                <a href="#">+213-559-175-931</a>
+                                <a href="tel:+213-796-347-344" rel="noopener"
+                                    >+213-796-347-344</a
+                                >
                             </li>
                             <li>
                                 <i class="fas fa-map-marker-alt"></i>
-                                <a href="#">Algeria</a>
+                                <a
+                                    href="https://en.wikipedia.org/wiki/Algeria"
+                                    rel="noopener"
+                                    >Algeria</a
+                                >
                             </li>
                         </ul>
                     </section>
@@ -606,7 +624,9 @@
                             <li>
                                 <p>
                                     illustrations by
-                                    <a href="https://storyset.com/">Storyset</a>
+                                    <a href="https://storyset.com/" rel="noopener"
+                                        >Storyset</a
+                                    >
                                 </p>
                             </li>
                             <li>
@@ -614,12 +634,14 @@
                                     Photo by
                                     <a
                                         href="https://unsplash.com/@writecodenow?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                                        rel="noopener"
                                     >
                                         Boitumelo Phetla
                                     </a>
                                     on
                                     <a
                                         href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                                        rel="noopener"
                                     >
                                         Unsplash
                                     </a>
@@ -633,6 +655,7 @@
                             <li>
                                 <a
                                     href="https://github.com/rouanis5/password-generator"
+                                    rel="noopener"
                                     target="_blank"
                                     >Github</a
                                 >
@@ -640,6 +663,7 @@
                             <li>
                                 <a
                                     href="https://github.com/rouanis5/password-generator/blob/main/LICENSE"
+                                    rel="noopener"
                                     target="_blank"
                                     >License</a
                                 >
