correct contactForm in small screens

--- a/src/index.html
+++ b/src/index.html
@@ -526,8 +526,10 @@
         </div>
         <div class="contactForm" id="popupForm">
             <div class="container">
-                <i class="close fas fa-times-circle" id="closePopupForm"></i>
-                <h3>Contact us</h3>
+                <div class="title">
+                    <h3>Contact us</h3>
+                    <i class="close fas fa-times-circle" id="closePopupForm"></i>
+                </div>
                 <p>
                     Thank you for your interest in our services. Please fill out the form
                     below
