make all css in one

--- a/src/index.html
+++ b/src/index.html
@@ -31,18 +31,12 @@
         <meta name="twitter:image:alt" content="100% succes with Password generator" />
         <meta name="twitter:card" content="password_generator" />
         <link rel="shortcut icon" type="image/svg" href="./images/favicon.svg" />
-        <link
-            rel="stylesheet"
-            href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
-        />
-        <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="./scss/style.scss" />
         <title>IMO | Password generator</title>
     </head>
     <body>
@@ -686,5 +680,5 @@
             </div>
         </footer>
     </body>
-    <script src="./js/main.js"></script>
+    <script src="./index.js"></script>
 </html>
