add shortcut popup

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,18 @@
         <title>IMO | Password generator</title>
     </head>
     <body>
+        <div class="shortcutPop active" id="shortcutPop">
+            <div class="container">
+                <div class="message">
+                    <p>Show keyboard shortcuts</p>
+                    <div class="keys"><span>Ctrl</span><span>?</span></div>
+                </div>
+                <div class="buttons">
+                    <button>remember me later</button>
+                    <button>got it!</button>
+                </div>
+            </div>
+        </div>
         <header class="parent" id="main">
             <nav class="topnav" id="topnav">
                 <div class="container">
