add shortcut popup and panel

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,66 @@
         <title>IMO | Password generator</title>
     </head>
     <body>
-        <div class="shortcutPop active" id="shortcutPop">
+        <div class="shortcuts" id="shortcuts">
+            <div class="container">
+                <div class="title">
+                    <h3>shortcuts</h3>
+                    <i class="close fas fa-times-circle" id="shortcutsClose"></i>
+                </div>
+                <ul>
+                    <li>
+                        <h6>Open settings</h6>
+                        <div class="keys">
+                            <span>Tab</span>
+                        </div>
+                    </li>
+                    <li>
+                        <h6>Number</h6>
+                        <div class="keys">
+                            <span>N</span>
+                        </div>
+                    </li>
+                    <li>
+                        <h6>Lowercase</h6>
+                        <div class="keys">
+                            <span>L</span>
+                        </div>
+                    </li>
+                    <li>
+                        <h6>Upercase</h6>
+                        <div class="keys">
+                            <span>U</span>
+                        </div>
+                    </li>
+                    <li>
+                        <h6>Symbols</h6>
+                        <div class="keys">
+                            <span>S</span>
+                        </div>
+                    </li>
+                    <li>
+                        <h6>Ambiguous</h6>
+                        <div class="keys">
+                            <span>A</span>
+                        </div>
+                    </li>
+                    <li>
+                        <h6>Change theme</h6>
+                        <div class="keys">
+                            <span>T</span>
+                        </div>
+                    </li>
+                    <li>
+                        <h6>Open keyboard shortcuts Panel</h6>
+                        <div class="keys">
+                            <span>Ctrl</span>
+                            <span>/</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="shortcutPop" id="shortcutPop">
             <div class="container">
                 <div class="message">
                     <p>Show keyboard shortcuts</p>
