--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="message">
                     <p>Show keyboard shortcuts</p>
-                    <div class="keys"><span>Ctrl</span><span>?</span></div>
+                    <div class="keys"><span>Ctrl</span><span>/</span></div>
                 </div>
                 <div class="buttons">
                     <button>remember me later</button>
