--- a/src/index.html
+++ b/src/index.html
@@ -46,57 +46,94 @@
                     <h3>shortcuts</h3>
                     <i class="close fas fa-times-circle" id="shortcutsClose"></i>
                 </div>
-                <ul>
-                    <li>
-                        <h6>Open settings</h6>
-                        <div class="keys">
-                            <span>Tab</span>
-                        </div>
-                    </li>
-                    <li>
-                        <h6>Number</h6>
-                        <div class="keys">
-                            <span>N</span>
-                        </div>
-                    </li>
-                    <li>
-                        <h6>Lowercase</h6>
-                        <div class="keys">
-                            <span>L</span>
-                        </div>
-                    </li>
-                    <li>
-                        <h6>Upercase</h6>
-                        <div class="keys">
-                            <span>U</span>
-                        </div>
-                    </li>
-                    <li>
-                        <h6>Symbols</h6>
-                        <div class="keys">
-                            <span>S</span>
-                        </div>
-                    </li>
-                    <li>
-                        <h6>Ambiguous</h6>
-                        <div class="keys">
-                            <span>A</span>
-                        </div>
-                    </li>
-                    <li>
-                        <h6>Change theme</h6>
-                        <div class="keys">
-                            <span>T</span>
-                        </div>
-                    </li>
-                    <li>
-                        <h6>Open keyboard shortcuts Panel</h6>
-                        <div class="keys">
-                            <span>Ctrl</span>
-                            <span>/</span>
-                        </div>
-                    </li>
-                </ul>
+                <div class="main">
+                    <div class="column">
+                        <ul>
+                            <li>
+                                <h6>Change theme</h6>
+                                <div class="keys">
+                                    <span>T</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Open keyboard shortcuts Panel</h6>
+                                <div class="keys">
+                                    <span>Ctrl</span>
+                                    <div class="char">+</div>
+                                    <span>/</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Scroll to the home page</h6>
+                                <div class="keys">
+                                    <span>H</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Go up</h6>
+                                <div class="keys">
+                                    <span><i class="fas fa-arrow-up"></span>
+                                    <div class="char">/</div>
+                                    <span><i class="fas fa-arrow-left"></i></span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Go down</h6>
+                                <div class="keys">
+                                    <span><i class="fas fa-arrow-down"></span>
+                                    <div class="char">/</div>
+                                    <span><i class="fas fa-arrow-right"></i></span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <ul>
+                            <li>
+                                <h6>Open settings</h6>
+                                <div class="keys">
+                                    <span>Tab</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Generate password</h6>
+                                <div class="keys">
+                                    <span>Enter</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Numbers</h6>
+                                <div class="keys">
+                                    <span>N</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Lowercase</h6>
+                                <div class="keys">
+                                    <span>L</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Upercase</h6>
+                                <div class="keys">
+                                    <span>U</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Symbols</h6>
+                                <div class="keys">
+                                    <span>S</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Ambiguous</h6>
+                                <div class="keys">
+                                    <span>A</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="shortcutPop" id="shortcutPop">
