correct shortcut active

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         <title>IMO | Password generator</title>
     </head>
     <body>
-        <div class="shortcuts active" id="shortcuts">
+        <div class="shortcuts" id="shortcuts">
             <div class="container">
                 <div class="title">
                     <div class="sections">
